# todolist_rust

./: .env  Cargo.toml
migrations/: 20260125111355_init_schema.sql
src/: app.rs  error.rs  main.rs  response.rs
src/config/: env.rs  jwt.rs
src/db/: postgres.rs
src/extractors/: request_id.rs
src/middleware/: auth_jwt.rs  mod.rs  request_id.rs
src/modules/auth/: handler.rs  model.rs  repository.rs  routes.rs  service.rs
src/modules/todo/: filter_pagination.rs  handler.rs  mod.rs  model.rs  repository.rs  routes.rs  service.rs
src/utils/: jwt.rs  mod.rs  password.rs  validation.rs
